<resources>
    <string name="app_name">Fertilizer_Page</string>
    <string name="enter_the_crop_to_be_sown">Enter the crop to be sown</string>
    <string name="input_the_soil_nutrient_parameter">Input The soil Nutrient Parameter:</string>
    <string name="enter_the_nitrogen_content">Enter the Nitrogen Content</string>
    <string name="enter_the_phosphate_content">Enter the Phosphate Content</string>
    <string name="enter_the_potassium_content">Enter the Potassium Content</string>
    <string name="calculate">Calculate</string>
    <string name="helloworld">HelloWorld</string>
    <string name="crop">Crop</string>
    <string name="nitrogen_content">Nitrogen Content</string>
    <string name="phosphate_content">Phosphate Content</string>
    <string name="potassium_content">Potassium Content</string>
</resources>
