<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="410dp"
        android:layout_height="535dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"

        android:layout_marginBottom="111dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Crop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:ems="10"
            android:hint="@string/enter_the_crop_to_be_sown"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="293dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"

            android:fontFamily="sans-serif-black"
            android:text="@string/input_the_soil_nutrient_parameter" />

        <EditText
            android:id="@+id/Nitrogen_content"
            android:layout_width="243dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"

            android:autofillHints="Enter the Nitrogen Content"
            android:ems="10"
            android:hint="@string/enter_the_nitrogen_content"
            android:inputType="number" />

        <EditText
            android:id="@+id/Phosphate_content"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"

            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_the_phosphate_content"
            android:inputType="number" />

        <EditText
            android:id="@+id/Potassium_content"
            android:layout_width="244dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="16dp"

            android:ems="10"
            android:hint="@string/enter_the_potassium_content"
            android:importantForAutofill="no"
            android:inputType="number" />

        <Button
            android:id="@+id/button"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"

            android:layout_marginTop="70dp"
            android:text="@string/calculate" />

    </LinearLayout>
</RelativeLayout>